--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -48,18 +48,9 @@
 		"preparexx": "tsx scripts/prepare",
 		"dev": "pnpm prepare && pnpm build && pnpm test"
 	},
-	"dependencies": {
-		"e": "^0.2.33",
-		"node-fetch": "2.6.7"
-	},
+	"dependencies": {},
 	"devDependencies": {
-		"@types/node": "^20.14.9",
-		"@types/node-fetch": "^2.6.1",
-		"concurrently": "^9.1.0",
 		"deep-object-diff": "^1.1.9",
-		"deepmerge": "^4.3.1",
-		"remeda": "^2.17.3",
-		"tsx": "^4.19.2",
 		"wtf_wikipedia": "^10.3.2"
 	},
 	"keywords": ["runescape"],
