--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -30,7 +30,6 @@
 		"decimal.js": "^10.4.3",
 		"deep-object-diff": "^1.1.9",
 		"deepmerge": "4.3.1",
-		"e": "0.2.33",
 		"emoji-regex": "^10.2.1",
 		"fast-deep-equal": "^3.1.3",
 		"ioredis": "^5.4.1",
@@ -44,9 +43,6 @@
 	"devDependencies": {
 		"@oldschoolgg/ts-config": "^0.0.1",
 		"@types/math-expression-evaluator": "^1.2.2",
-		"@types/node": "^20.14.9",
-		"concurrently": "^9.0.1",
-		"discord.js": "^14.16.2",
-		"esbuild": "^0.24.0"
+		"discord.js": "^14.16.2"
 	}
 }
