--- a/packages/toolkit/tsconfig.base.json
+++ b/packages/toolkit/tsconfig.base.json
@@ -5,6 +5,7 @@
 		"checkJs": false,
 		"skipLibCheck": true,
 		"types": ["node"],
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"emitDeclarationOnly": true
 	}
 }
