--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
 	"name": "oldschoolbot",
 	"version": "0.0.1",
 	"private": true,
-	"workspaces": ["packages/*"],
 	"scripts": {
 		"============DEVELOPMENT": "============",
-		"watch": "nodemon --delay 1ms -e ts -w src --exec 'pnpm buildandrun'",
-		"dev:stage1": "pnpm concurrent \"pnpm\" \"pnpm wipedist\" \"prisma db push\" \"pnpm generate:robochimp\"",
-		"dev:stage2": "pnpm concurrent \"pnpm build:tsc\"",
-		"dev:stage3": "pnpm concurrent \"pnpm commands\" \"pnpm creatables\" \"pnpm wiki\"",
-		"dev:stage4": "pnpm lint && pnpm test",
-		"dev": "pnpm dev:stage1 && pnpm dev:stage2 && pnpm dev:stage3 && pnpm dev:stage4",
+		"watch": "nodemon --delay 1ms -e ts -w src --exec 'pnpm build:esbuild && node --enable-source-maps dist'",
+		"dev:stage1": "pnpm concurrent \"pnpm install\" \"pnpm wipedist\" \"prisma db push\" \"pnpm generate:robochimp\"",
+		"dev:stage2": "pnpm concurrent \"pnpm commands\" \"pnpm creatables\" \"pnpm wiki\" \"pnpm build\"",
+		"dev:stage3": "pnpm lint && pnpm test",
+		"dev": "pnpm dev:stage1 && pnpm dev:stage2 && pnpm dev:stage3",
 		"watch:tsc": "tsc -w -p src",
-		"buildandrun": "pnpm build:esbuild && node --enable-source-maps dist",
 		"start": "pnpm watch",
 		"============SCRIPTS": "============",
 		"spritesheet": "tsx ./scripts/spritesheet.ts && pnpm lint:biome",
@@ -22,21 +19,19 @@
 		"creatables": "tsx ./scripts/renderCreatablesFile.ts",
 		"generate:robochimp": "prisma generate --no-hints --schema prisma/robochimp.prisma",
 		"============BUILDING": "============",
-		"build": "npx nx run-many -t build --exclude=oldschoolbot && pnpm build:esbuild",
+		"build": "pnpm build:esbuild",
 		"gen": "concurrently --raw \"prisma generate --no-hints\" \"pnpm generate:robochimp\" && echo \"Generated Prisma Client\"",
-		"build:tsc": "tsc -p src",
 		"build:esbuild": "concurrently --raw \"pnpm build:main\" \"pnpm build:workers\"",
 		"build:main": "esbuild src/index.ts src/lib/workers/index.ts --sourcemap=inline --minify --legal-comments=none --outdir=./dist --log-level=error --bundle --platform=node --loader:.node=file --external:skia-canvas --external:@prisma/robochimp --external:@prisma/client --external:zlib-sync --external:bufferutil --external:oldschooljs --external:discord.js --external:node-fetch --external:piscina",
 		"build:workers": "esbuild src/lib/workers/kill.worker.ts src/lib/workers/finish.worker.ts src/lib/workers/casket.worker.ts --sourcemap=inline --log-level=error --bundle --minify --legal-comments=none --outdir=./dist/lib/workers --platform=node --loader:.node=file --external:skia-canvas --external:@prisma/robochimp --external:@prisma/client --external:zlib-sync --external:bufferutil --external:oldschooljs --external:discord.js --external:node-fetch --external:piscina",
 		"============TESTING": "============",
-		"test": "pnpm concurrent \"pnpm test:circular\" \"pnpm test:lint\" \"pnpm test:unit\" \"pnpm test:typecheck\"",
-		"test:typecheck": "concurrently \"tsc -p tests/unit\" \"tsc -p tests/integration\"",
-		"test:circular": "dpdm --exit-code circular:1 --progress=false --warning=false --tree=false ./dist/index.js",
+		"test": "pnpm concurrent \"pnpm test:lint\" \"pnpm test:unit\" \"pnpm test:typecheck\"",
+		"test:typecheck": "concurrently \"tsc --noEmit -p tests/unit\" \"tsc --noEmit -p tests/integration\" \"tsc --noEmit -p src\"",
 		"test:lint": "biome check --diagnostic-level=error",
 		"test:unit": "vitest run --config vitest.unit.config.mts",
 		"test:docker": "docker compose up --no-attach db --no-attach redis --build --abort-on-container-exit && docker compose down -v",
 		"test:watch": "vitest --config vitest.unit.config.mts --coverage",
-		"test:ci:unit": "pnpm concurrent \"pnpm test:unit\" \"pnpm test:lint\" \"tsc -p tests/integration\" \"tsc -p tests/unit\" \"pnpm build:tsc && pnpm test:circular\"",
+		"test:ci:unit": "pnpm concurrent \"pnpm test:unit\" \"pnpm test:lint\" \"tsc -p tests/integration\" \"tsc -p tests/unit\"",
 		"============LINTING": "============",
 		"lint:biome": "biome check --write --unsafe --diagnostic-level=error",
 		"lint:prettier": "prettier --use-tabs \"./**/*.{md,yml}\" --write --log-level silent",
@@ -44,11 +39,15 @@
 		"lint": "pnpm concurrent \"pnpm lint:biome\" \"pnpm lint:prettier\" \"pnpm lint:prisma\"",
 		"============MISC": "============",
 		"wipedist": "node -e \"try { require('fs').rmSync('dist', { recursive: true }) } catch(_){}\"",
-		"concurrent": "concurrently --raw --kill-others-on-fail"
+		"concurrent": "concurrently --raw --kill-others-on-fail",
+		"build:packages": "pnpm --stream -r build",
+		"============monorepo": "============",
+		"monorepo:build": "pnpm build:packages && pnpm build",
+		"monorepo:test": "pnpm concurrent \"pnpm --stream -r test\" \"pnpm test"
 	},
 	"dependencies": {
-		"@oldschoolgg/toolkit": "workspace:*",
-		"oldschooljs": "workspace:*",
+		"@oldschoolgg/toolkit": "0.0.1",
+		"oldschooljs": "0.0.1",
 		"@prisma/client": "^5.20.0",
 		"@sapphire/ratelimits": "^2.4.9",
 		"@sapphire/snowflake": "^3.5.3",
@@ -86,13 +85,8 @@
 		"@types/node-fetch": "^2.6.1",
 		"@vitest/coverage-v8": "^2.1.2",
 		"concurrently": "^8.2.2",
-		"dpdm": "^3.14.0",
 		"esbuild": "0.24.0",
-		"fast-glob": "^3.3.2",
-		"google-auth-library": "^9.14.1",
-		"google-spreadsheet": "^4.1.4",
 		"nodemon": "^3.1.7",
-		"nx": "20.1.2",
 		"prettier": "^3.3.3",
 		"prisma": "^5.20.0",
 		"spritesmith": "^3.4.1",
@@ -106,6 +100,5 @@
 	"resolutions": {
 		"esbuild": "0.24.0"
 	},
-	"nx": {},
 	"packageManager": "pnpm@8.15.6+sha512.77b89e9be77a2b06ad8f403a19cae5e22976f61023f98ad323d5c30194958ebc02ee0a6ae5d13ee454f6134e4e8caf29a05f0b1a0e1d2b17bca6b6a1f1159f86"
 }
