--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -42,13 +42,15 @@
 	},
 	"scripts": {
 		"wipedist": "node -e \"try { require('fs').rmSync('dist', { recursive: true }) } catch(_){}\"",
-		"test": "pnpm build && concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\"",
+		"test": "concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
 		"test:unit": "vitest run --coverage",
 		"build": "pnpm wipedist && tsc -p src && node esbuild.cjs",
 		"preparexx": "tsx scripts/prepare",
 		"dev": "pnpm prepare && pnpm build && pnpm test"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"deepmerge": "4.3.1"
+	},
 	"devDependencies": {
 		"deep-object-diff": "^1.1.9",
 		"wtf_wikipedia": "^10.3.2"
