--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -23,8 +23,7 @@
 	"scripts": {
 		"build": "pnpm wipedist && tsc -p src && node esbuild.js",
 		"wipedist": "node -e \"try { require('fs').rmSync('dist', { recursive: true }) } catch(_){}\"",
-		"test": "concurrently \"tsc -p src\" \"pnpm test:unit\" \"tsc -p tests\"",
-		"dev": "pnpm build && pnpm test"
+		"test": "concurrently \"tsc -p src\" \"pnpm vitest run\" \"tsc -p tests\""
 	},
 	"dependencies": {
 		"decimal.js": "^10.4.3",
@@ -35,14 +34,14 @@
 		"ioredis": "^5.4.1",
 		"math-expression-evaluator": "^1.3.14",
 		"pure-rand": "^6.1.0",
-		"zod": "3.23.8"
+		"zod": "^3.23.8"
 	},
 	"peerDependencies": {
-		"discord.js": "^14.16.2"
+		"discord.js": "^14.16.3"
 	},
 	"devDependencies": {
 		"@oldschoolgg/ts-config": "^0.0.1",
 		"@types/math-expression-evaluator": "^1.2.2",
-		"discord.js": "^14.16.2"
+		"discord.js": "^14.16.3"
 	}
 }
