--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -21,8 +21,7 @@
 		}
 	},
 	"scripts": {
-		"build": "pnpm wipedist && tsc -p src && node esbuild.js",
-		"wipedist": "node -e \"try { require('fs').rmSync('dist', { recursive: true }) } catch(_){}\"",
+		"build": "node esbuild.js",
 		"test": "concurrently \"tsc -p src\" \"pnpm vitest run\" \"tsc -p tests\""
 	},
 	"dependencies": {
