--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"============DEVELOPMENT": "============",
-		"watch": "nodemon --delay 1ms -e ts -w src --exec 'pnpm build:esbuild && node --enable-source-maps dist'",
+		"watch": "nodemon --delay 1ms -e ts -w src --exec \"pnpm build && node --enable-source-maps dist\"",
 		"dev:stage1": "pnpm concurrent \"pnpm install\" \"pnpm wipedist\" \"prisma db push\" \"pnpm generate:robochimp\"",
 		"dev:stage2": "pnpm concurrent \"pnpm commands\" \"pnpm creatables\" \"pnpm wiki\" \"pnpm build\"",
 		"dev:stage3": "pnpm lint && pnpm test",
@@ -19,7 +19,7 @@
 		"creatables": "tsx ./scripts/renderCreatablesFile.ts",
 		"generate:robochimp": "prisma generate --no-hints --schema prisma/robochimp.prisma",
 		"============BUILDING": "============",
-		"build": "pnpm build:esbuild",
+		"build": "pnpm build:packages && pnpm build:esbuild",
 		"gen": "concurrently --raw \"prisma generate --no-hints\" \"pnpm generate:robochimp\" && echo \"Generated Prisma Client\"",
 		"build:esbuild": "concurrently --raw \"pnpm build:main\" \"pnpm build:workers\"",
 		"build:main": "esbuild src/index.ts src/lib/workers/index.ts --sourcemap=inline --minify --legal-comments=none --outdir=./dist --log-level=error --bundle --platform=node --loader:.node=file --external:skia-canvas --external:@prisma/robochimp --external:@prisma/client --external:zlib-sync --external:bufferutil --external:oldschooljs --external:discord.js --external:node-fetch --external:piscina",
@@ -33,10 +33,10 @@
 		"test:watch": "vitest --config vitest.unit.config.mts --coverage",
 		"test:ci:unit": "pnpm concurrent \"pnpm test:unit\" \"pnpm test:lint\" \"tsc -p tests/integration\" \"tsc -p tests/unit\"",
 		"============LINTING": "============",
-		"lint:biome": "git diff --name-only | xargs biome check --write --unsafe --diagnostic-level=error",
+		"lint:biome": "git diff --name-only HEAD | xargs biome check --write --unsafe --diagnostic-level=error",
 		"lint:prettier": "prettier --use-tabs \"./**/*.{md,yml}\" --write --log-level silent",
 		"lint:prisma": "pnpm concurrent \"prisma format --schema ./prisma/robochimp.prisma\" \"prisma format --schema ./prisma/schema.prisma\"",
-		"lint": "pnpm concurrent \"pnpm lint:biome\" \"pnpm lint:prettier\" \"pnpm lint:prisma\"",
+		"lint": "pnpm concurrent \"pnpm lint:biome\" \"pnpm lint:prettier\"",
 		"============MISC": "============",
 		"wipedist": "node -e \"try { require('fs').rmSync('dist', { recursive: true }) } catch(_){}\"",
 		"concurrent": "concurrently --raw --kill-others-on-fail",
