Use lint script for all linting

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"dev": "pnpm dev:stage1 && pnpm dev:stage2 && pnpm dev:stage3",
 		"watch:tsc": "tsc -w -p src",
 		"start": "pnpm watch",
+		"lint": "tsx scripts/lint.ts",
 		"============SCRIPTS": "============",
 		"spritesheet": "tsx ./scripts/spritesheet.ts && pnpm lint:biome",
 		"data": "concurrently \"tsx ./scripts/monster_table.ts\" && pnpm lint",
@@ -32,11 +33,6 @@
 		"test:docker": "docker compose up --no-attach db --no-attach redis --build --abort-on-container-exit && docker compose down -v",
 		"test:watch": "vitest --config vitest.unit.config.mts --coverage",
 		"test:ci:unit": "pnpm concurrent \"pnpm test:unit\" \"pnpm test:lint\" \"tsc -p tests/integration\" \"tsc -p tests/unit\"",
-		"============LINTING": "============",
-		"lint:biome": "git diff --name-only --diff-filter=d HEAD | xargs biome check --write --unsafe --diagnostic-level=error",
-		"lint:prettier": "prettier --use-tabs \"./**/*.{md,yml}\" --write --log-level silent",
-		"lint:prisma": "pnpm concurrent \"prisma format --schema ./prisma/robochimp.prisma\" \"prisma format --schema ./prisma/schema.prisma\"",
-		"lint": "pnpm concurrent \"pnpm lint:biome\" \"pnpm lint:prettier\"",
 		"============MISC": "============",
 		"concurrent": "concurrently --raw --kill-others-on-fail",
 		"build:packages": "concurrently --raw \"pnpm --stream -r build:esbuild\" \"pnpm --stream -r build:types\"",
