--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -37,6 +37,8 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-${{ matrix.node_version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+      - name: Install node-gyp
+        run: npm install -g node-gyp
       - name: Copy Configuration
         run: |
           cp .env.test .env
