--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"@vitest/coverage-v8": "^2.1.2",
 		"concurrently": "^8.2.2",
 		"esbuild": "0.24.0",
+		"node-gyp": "^10.2.0",
 		"node-gyp-build": "^4.8.4",
 		"nodemon": "^3.1.7",
 		"prettier": "^3.3.3",
@@ -89,9 +90,6 @@
 		"tsx": "^4.19.2",
 		"typescript": "^5.5.3",
 		"vitest": "^2.1.5"
-	},
-	"engines": {
-		"node": "20.15.0"
 	},
 	"resolutions": {
 		"esbuild": "0.24.0"
