--- a/package.json
+++ b/package.json
@@ -94,5 +94,5 @@
 	"resolutions": {
 		"esbuild": "0.24.0"
 	},
-	"packageManager": "pnpm@8.15.6+sha512.77b89e9be77a2b06ad8f403a19cae5e22976f61023f98ad323d5c30194958ebc02ee0a6ae5d13ee454f6134e4e8caf29a05f0b1a0e1d2b17bca6b6a1f1159f86"
+	"packageManager": "pnpm@9.14.2"
 }
