--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
 		"unist-util-visit-parents": "^6.0.1"
 	},
 	"devDependencies": {
-		"@types/markdown-it": "^14"
+		"@types/markdown-it": "^14",
+		"typescript": "^5.5.3"
 	}
 }
