--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -7,14 +7,14 @@
 	"types": "dist/index.d.ts",
 	"exports": {
 		".": {
-			"require": "./dist/index.cjs",
-			"import": "./dist/index.cjs",
-			"types": "./dist/index.d.ts"
+			"types": "./dist/index.d.ts",
+			"require": "./dist/cjs/index.cjs",
+			"import": "./dist/esm/index.mjs"
 		},
-		"./*": {
-			"require": "./dist/index.cjs",
-			"import": "./dist/index.cjs",
-			"types": "./dist/index.d.ts"
+		"./dist/*": {
+			"types": "./dist/index.d.ts",
+			"require": "./dist/cjs/index.cjs",
+			"import": "./dist/esm/index.mjs"
 		}
 	},
 	"license": "MIT",
