--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,10 +1,3 @@
 {
-	"extends": "../tsconfig.base.json",
-	"compilerOptions": {
-		"jsx": "react-jsx",
-		"jsxImportSource": "preact",
-		"paths": {
-			"@data/*": ["../../../data/*"]
-		}
-	}
+	"extends": "../tsconfig.base.json"
 }
