--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,ts}]
+[*.{js,ts,.astro,.md,.tsx,.jsx}]
 charset = utf-8
 indent_style = tab
 indent_size = 4
