--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,17 @@
 			".yarn",
 			".pnpm-store"
 		],
-		"include": ["**/*.ts", "**/*.mts", "**/*.json", "**/*.test.ts", "**/*.mdx", "**/*.md", "**/*.mjs", "**/*.cjs"]
+		"include": [
+			"**/*.ts",
+			"**/*.mts",
+			"**/*.json",
+			"**/*.test.ts",
+			"**/*.mdx",
+			"**/*.md",
+			"**/*.mjs",
+			"**/*.cjs",
+			"**/*.tsx"
+		]
 	},
 	"vcs": {
 		"enabled": true,
