--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,3 +1,10 @@
 {
-	"extends": "../tsconfig.base.json"
+	"extends": "../tsconfig.base.json",
+	"compilerOptions": {
+		"jsx": "react-jsx",
+		"jsxImportSource": "preact",
+		"paths": {
+			"@data/*": ["../../../data/*"]
+		}
+	}
 }
