--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -25,7 +25,7 @@
 	"scripts": {
 		"test": "concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
 		"test:unit": "vitest run --coverage",
-		"preparexx": "tsx scripts/prepare",
+		"prepare": "tsx scripts/prepare",
 		"dev": "pnpm prepare && pnpm build && pnpm test",
 		"build:esbuild": "node esbuild.cjs",
 		"build:types": "tsc -p src"
