--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - name: Checkout Project
         uses: actions/checkout@v4
-      - run: corepack enable && corepack install
+      - run: corepack enable && corepack install && corepack prepare pnpm@10.0.0 --activate
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v4
         with:
