Simplify/improve lint script

--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -26,7 +26,7 @@
 		"test": "concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
 		"test:unit": "vitest run --coverage",
 		"generate": "tsx scripts/prepare",
-		"dev": "pnpm generate && pnpm build && pnpm test",
+		"dev": "pnpm generate && concurrently \"pnpm build:esbuild\" \"pnpm build:esbuild\" && pnpm test",
 		"build:esbuild": "node esbuild.cjs",
 		"build:types": "tsc -p src"
 	},
