--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -18,7 +18,7 @@ jobs:
     timeout-minutes: 5
     strategy:
       matrix:
-        node_version: [20.18.1]
+        node_version: [20.18.1, 22]
         os: [ubuntu-latest]
     concurrency:
       group: ${{ github.ref_name }}-unittests
