--- a/docs/package.json
+++ b/docs/package.json
@@ -13,18 +13,18 @@
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/preact": "^3.5.4",
 		"@astrojs/starlight": "^0.28.2",
-		"@astrojs/tailwind": "^5.1.2",
+		"@tailwindcss/vite": "^4.1.5",
 		"astro": "^4.16.18",
 		"collapse-white-space": "^2.1.0",
 		"markdown-it": "^14.1.0",
 		"oldschooljs": "workspace:*",
-		"preact": "^10.25.0",
-		"tailwindcss": "^3.4.15",
+		"preact": "^10.26.6",
+		"tailwindcss": "^4.1.5",
 		"unist-util-visit": "^5.0.0",
 		"unist-util-visit-parents": "^6.0.1"
 	},
 	"devDependencies": {
-		"@types/markdown-it": "^14",
+		"@types/markdown-it": "^14.1.2",
 		"typescript": "^5.5.3"
 	}
 }
