Use node22 for integration tests, test both in unit tests (#6365)

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -18,11 +18,8 @@ jobs:
     timeout-minutes: 5
     strategy:
       matrix:
-        node_version: [20.18.1]
+        node_version: [20.18.1, 22]
         os: [ubuntu-latest]
-    concurrency:
-      group: ${{ github.ref_name }}-unittests
-      cancel-in-progress: true
     steps:
       - name: Checkout Project
         uses: actions/checkout@v4
