Oldschooljs cleanup and refactoring

--- a/packages/oldschooljs/tsconfig.json
+++ b/packages/oldschooljs/tsconfig.json
@@ -3,7 +3,10 @@
 	"compilerOptions": {
 		"outDir": "./dist",
 		"emitDeclarationOnly": true,
-		"declarationDir": "./dist"
+		"declarationDir": "./dist",
+		"module": "esnext",
+		"target": "ESNext",
+		"moduleResolution": "Node"
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["**/*.json", "node_modules"]
