--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -5,6 +5,6 @@
 		"composite": true,
 		"noEmit": true
 	},
-	"include": ["scripts", "src/**/*"],
-	"exclude": ["**/node_modules"]
+	"include": [".", "../src/**/*", "../tests/unit/utils.ts"],
+	"exclude": ["node_modules"]
 }
