--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"dependencies": {
 		"@oldschoolgg/toolkit": "workspace:*",
+		"@oldschoolgg/collectionlog": "workspace:*",
 		"@prisma/client": "^5.22.0",
 		"@sapphire/ratelimits": "^2.4.9",
 		"@sapphire/snowflake": "^3.5.3",
