Fix main tests running twice

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"build:packages": "concurrently --raw \"pnpm -r build:esbuild\" \"pnpm -r build:types\"",
 		"============monorepo": "============",
 		"monorepo:build": "pnpm concurrent \"pnpm build:packages\" \"pnpm gen\" && pnpm build:esbuild",
-		"monorepo:test": "pnpm concurrent \"pnpm --stream -r test\" \"pnpm test\""
+		"monorepo:test": "pnpm --stream -r test"
 	},
 	"dependencies": {
 		"@oldschoolgg/collectionlog": "workspace:*",
