--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -23,7 +23,8 @@
 	"scripts": {
 		"test": "concurrently \"tsc -p src\" \"pnpm vitest run\" \"tsc -p tests\"",
 		"build:esbuild": "node esbuild.cjs",
-		"build:types": "tsc -p src"
+		"build:types": "tsc -p src",
+		"build": "concurrently \"pnpm build:types\" \"pnpm build:esbuild\""
 	},
 	"dependencies": {
 		"decimal.js": "^10.4.3",
