--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,7 +4,11 @@
 		"outDir": "../dist",
 		"rootDir": ".",
 		"composite": true,
-		"tsBuildInfoFile": "../dist/.tsbuildinfo"
+		"tsBuildInfoFile": "../dist/.tsbuildinfo",
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./*"]
+		}
 	},
 	"include": [".", "./**/*.json"],
 	"exclude": ["**/node_modules", "**/.*/"]
