--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,8 +23,9 @@
 		"types": ["node", "node-fetch"],
 		"esModuleInterop": true,
 		"skipDefaultLibCheck": true,
+		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/*"]
+			"@/*": ["src/*"]
 		}
 	},
 	"exclude": ["**/node_modules", "node_modules"]
