--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
 	"scripts": {
 		"============DEVELOPMENT": "============",
 		"watch": "nodemon --delay 1ms -e ts -w src --exec \"pnpm build:esbuild && node --enable-source-maps dist\"",
-		"dev:stage1": "pnpm concurrent \"pnpm install\" \"prisma db push\" \"pnpm generate:robochimp\" \"pnpm monorepo:build\"",
-		"dev:stage2": "pnpm concurrent \"pnpm commands\" \"pnpm creatables\" \"pnpm build:esbuild\"",
+		"dev:stage1": "pnpm concurrently --raw \"pnpm install\" \"prisma db push\" \"pnpm generate:robochimp\" \"pnpm build:packages\"",
+		"dev:stage2": "pnpm concurrently --raw \"pnpm commands\" \"pnpm creatables\" \"pnpm build\"",
 		"dev:stage3": "pnpm lint && pnpm test",
 		"dev": "pnpm dev:stage1 && pnpm dev:stage2 && pnpm dev:stage3",
 		"watch:tsc": "tsc -w -p src",
 		"start": "pnpm watch",
 		"lint": "tsx scripts/lint.ts",
 		"============SCRIPTS": "============",
-		"spritesheet": "tsx ./scripts/spritesheet.ts && pnpm lint",
-		"data": "concurrently \"tsx ./scripts/monster_table.ts\" && pnpm lint",
-		"wiki": "tsx ./scripts/wiki.ts",
-		"commands": "tsx ./scripts/renderCommandsFile.ts",
-		"creatables": "tsx ./scripts/renderCreatablesFile.ts",
+		"spritesheet": "tsx --tsconfig scripts/tsconfig.jso ./scripts/spritesheet.ts && pnpm lint",
+		"data": "tsx --tsconfig scripts/tsconfig.json ./scripts/monster_table.ts && pnpm lint",
+		"wiki": "tsx --tsconfig scripts/tsconfig.json ./scripts/wiki.ts",
+		"commands": "tsx --tsconfig scripts/tsconfig.json ./scripts/renderCommandsFile.ts",
+		"creatables": "tsx --tsconfig scripts/tsconfig.json ./scripts/renderCreatablesFile.ts",
 		"generate:robochimp": "prisma generate --no-hints --schema prisma/robochimp.prisma",
 		"============BUILDING": "============",
 		"build": "pnpm build:packages && concurrently --raw \"tsx esbuild.mts\" \"pnpm test:types\"",
@@ -34,7 +34,7 @@
 		"concurrent": "concurrently --raw --kill-others-on-fail",
 		"build:packages": "pnpm --stream -r --filter \"!.\" --filter \"!./docs\" build",
 		"============monorepo": "============",
-		"monorepo:build": "pnpm concurrent \"pnpm build:packages\" \"pnpm gen\" && pnpm build:esbuild",
+		"monorepo:build": "pnpm concurrent \"pnpm build:packages\" \"pnpm gen\" && pnpm build",
 		"monorepo:test": "pnpm --stream -r test"
 	},
 	"dependencies": {
