Add creatables wiki page

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -3,6 +3,8 @@
 	"compilerOptions": {
 		"jsx": "react-jsx",
 		"jsxImportSource": "preact",
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
 		"paths": {
 			"@data/*": ["../../../data/*"]
 		}
