--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
+		"remeda": "^2.23.0",
 		"@astrojs/preact": "^3.5.4",
 		"@astrojs/starlight": "^0.28.2",
 		"@tailwindcss/vite": "^4.1.5",
