--- a/biome.json
+++ b/biome.json
@@ -40,14 +40,16 @@
 			"recommended": true,
 			"a11y": {
 				"useAltText": "off",
-				"useKeyWithClickEvents": "off"
+				"useKeyWithClickEvents": "off",
+				"useButtonType": "off"
 			},
 			"suspicious": {
 				"noExplicitAny": "warn",
 				"noAssignInExpressions": "warn",
 				"noAsyncPromiseExecutor": "off",
 				"noConfusingVoidType": "off",
-				"noFocusedTests": "off"
+				"noFocusedTests": "off",
+				"noArrayIndexKey": "warn"
 			},
 			"style": {
 				"noNonNullAssertion": "off",
