--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"simple-statistics": "^7.8.3",
 		"skia-canvas": "^1.0.2",
 		"sonic-boom": "^4.2.0",
+		"ts-pattern": "^5.7.1",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
