--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"nodemon": "^3.1.10",
 		"prettier": "^3.5.3",
 		"prisma": "^6.10.1",
+		"sharp": "^0.34.3",
 		"spritesmith": "^3.5.1",
 		"tsx": "^4.20.3",
 		"typescript": "^5.8.3",
