--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"watch": "nodemon --delay 1ms -e ts -w src --exec \"tsx esbuild.mts && node --enable-source-maps dist\"",
 		"dev:stage1": "pnpm concurrently --raw \"pnpm install\" \"prisma db push\" \"pnpm generate:robochimp\" \"pnpm build:packages\"",
 		"dev:stage2": "pnpm concurrently --raw \"pnpm tsx --tsconfig scripts/tsconfig.json scripts/scripts.ts\" \"pnpm build\"",
-		"dev:stage3": "pnpm lint && pnpm test",
+		"dev:stage3": "pnpm lint && pnpm --stream -r test",
 		"dev": "pnpm dev:stage1 && pnpm dev:stage2 && pnpm dev:stage3",
 		"watch:tsc": "tsc -w -p src",
 		"start": "pnpm watch",
