--- a/docs/package.json
+++ b/docs/package.json
@@ -11,15 +11,15 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
-		"remeda": "^2.23.0",
-		"@astrojs/preact": "^3.5.4",
-		"@astrojs/starlight": "^0.28.2",
-		"@tailwindcss/vite": "^4.1.5",
-		"astro": "^4.16.19",
+		"@astrojs/preact": "^4.1.1",
+		"@astrojs/starlight": "^0.35.2",
+		"@astrojs/tailwind": "^6.0.2",
+		"astro": "^5.13.6",
 		"collapse-white-space": "^2.1.0",
 		"markdown-it": "^14.1.0",
 		"oldschooljs": "workspace:*",
 		"preact": "^10.26.9",
+		"remeda": "^2.23.0",
 		"tailwindcss": "^4.1.5",
 		"unist-util-visit": "^5.0.0",
 		"unist-util-visit-parents": "^6.0.1"
