--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
 			"devalue": "5.3.2",
 			"brace-expansion": "2.0.2",
 			"@babel/runtime": "7.26.10",
-			"tough-cookie": "4.1.3"
+			"tough-cookie": "4.1.3",
+			"vite@^7": "7.0.7"
 		}
 	}
 }
