--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,15 @@
 packages:
-  - "packages/*"
-  - "docs"
+  - packages/*
+  - docs
+
+ignoredBuiltDependencies:
+  - wtf_wikipedia
+
+onlyBuiltDependencies:
+  - "@prisma/client"
+  - "@prisma/engines"
+  - bufferutil
+  - esbuild
+  - prisma
+  - sharp
+  - skia-canvas
